Gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> Sentencias_G
Rule 2     S -> <empty>
Rule 3     Sentencias_G -> Sentencias_G Sentencia_G
Rule 4     Sentencias_G -> Sentencia_G
Rule 5     Sentencia_G -> error
Rule 6     Sentencia_G -> Declaracion
Rule 7     Sentencia_G -> LASIGNACION pyc
Rule 8     Sentencia_G -> STRUCT pyc
Rule 9     Sentencia_G -> Funcion
Rule 10    Declaracion -> Tipos L_Dec pyc
Rule 11    L_Dec -> L_Dec coma Dec
Rule 12    L_Dec -> Dec
Rule 13    Dec -> iden
Rule 14    Dec -> iden asigna EXP
Rule 15    Dec -> iden cor1 cor2 asigna EXP
Rule 16    Dec -> iden LACCESO
Rule 17    Dec -> iden LACCESO asigna EXP
Rule 18    LACCESO -> LACCESO cor1 EXP cor2
Rule 19    LACCESO -> cor1 EXP cor2
Rule 20    LASIGNACION -> LASIGNACION coma ASIGNACION
Rule 21    LASIGNACION -> ASIGNACION
Rule 22    ASIGNACION -> iden
Rule 23    ASIGNACION -> iden OP EXP
Rule 24    ASIGNACION -> iden LACCESO
Rule 25    ASIGNACION -> iden LACCESO OP EXP
Rule 26    ASIGNACION -> ACCESO_STRUCT OP EXP
Rule 27    ASIGNACION -> ACCESO_STRUCT
Rule 28    OP -> andbasigna
Rule 29    OP -> divasigna
Rule 30    OP -> masasigna
Rule 31    OP -> menosasigna
Rule 32    OP -> modasigna
Rule 33    OP -> orbasigna
Rule 34    OP -> porasigna
Rule 35    OP -> shiftizqasigna
Rule 36    OP -> shiftderasigna
Rule 37    OP -> xorbasinga
Rule 38    OP -> asigna
Rule 39    STRUCT -> t_struct iden llav1 ATRIBUTOS llav2
Rule 40    ATRIBUTOS -> ATRIBUTOS ATRIBUTO
Rule 41    ATRIBUTOS -> ATRIBUTO
Rule 42    ATRIBUTO -> Tipos LItemsStruct pyc
Rule 43    LItemsStruct -> LItemsStruct coma ItemsStruct
Rule 44    LItemsStruct -> ItemsStruct
Rule 45    ItemsStruct -> iden
Rule 46    ItemsStruct -> iden LACCESO
Rule 47    ItemsStruct -> iden cor1 cor2
Rule 48    ItemsStruct2 -> iden
Rule 49    ItemsStruct2 -> iden LACCESO
Rule 50    ACCESO_STRUCT -> ItemsStruct2 punto ItemsStruct2
Rule 51    Tipos -> t_char
Rule 52    Tipos -> t_int
Rule 53    Tipos -> t_double
Rule 54    Tipos -> t_float
Rule 55    Funcion -> Tipos iden par1 Parametros par2 BLOQUE
Rule 56    Funcion -> t_void iden par1 Parametros par2 BLOQUE
Rule 57    Parametros -> <empty>
Rule 58    Parametros -> Parametros coma Parametro
Rule 59    Parametros -> Parametro
Rule 60    SS_F -> SS_F S_F
Rule 61    SS_F -> S_F
Rule 62    S_F -> error
Rule 63    S_F -> Declaracion
Rule 64    S_F -> LASIGNACION pyc
Rule 65    S_F -> INSTANCIA pyc
Rule 66    S_F -> STRUCT pyc
Rule 67    S_F -> IF
Rule 68    S_F -> LLAMADA pyc
Rule 69    S_F -> BREAK pyc
Rule 70    S_F -> CONTINUE pyc
Rule 71    S_F -> SWITCH
Rule 72    S_F -> DO_WHILE pyc
Rule 73    S_F -> WHILE
Rule 74    S_F -> RETURN pyc
Rule 75    S_F -> ETIQUETA
Rule 76    S_F -> GOTO pyc
Rule 77    S_F -> FOR
Rule 78    S_F -> PRINTF pyc
Rule 79    S_F -> INC_POST pyc
Rule 80    S_F -> INC_PRE pyc
Rule 81    PRINTF -> t_printf par1 string coma ELEMENTS par2
Rule 82    PRINTF -> t_printf par1 string par2
Rule 83    INSTANCIA -> t_struct iden iden LACCESO
Rule 84    INSTANCIA -> t_struct iden iden
Rule 85    BLOQUE -> llav1 SS_F llav2
Rule 86    BLOQUE -> llav1 llav2
Rule 87    FOR -> t_for par1 INICIO EXP pyc INCDC BLOQUE
Rule 88    INICIO -> Tipos Dec pyc
Rule 89    INICIO -> ASIGNACION pyc
Rule 90    INICIO -> pyc
Rule 91    INCDC -> EXP par2
Rule 92    INCDC -> par2
Rule 93    ETIQUETA -> iden bipunto
Rule 94    GOTO -> t_goto iden
Rule 95    DO_WHILE -> t_do BLOQUE t_while par1 EXP par2
Rule 96    WHILE -> t_while par1 EXP par2 BLOQUE
Rule 97    RETURN -> t_return EXP
Rule 98    RETURN -> t_return
Rule 99    SWITCH -> t_switch par1 EXP par2 llav1 CASOS llav2
Rule 100   SWITCH -> t_switch par1 EXP par2 llav1 CASOS DEFAULT llav2
Rule 101   CASOS -> CASOS CASO
Rule 102   CASOS -> CASO
Rule 103   CASO -> t_case EXP bipunto SS_F
Rule 104   CASO -> t_case EXP bipunto
Rule 105   DEFAULT -> t_default bipunto SS_F
Rule 106   DEFAULT -> t_default bipunto
Rule 107   BREAK -> t_break
Rule 108   CONTINUE -> t_continue
Rule 109   IF -> t_if par1 EXP par2 BLOQUE
Rule 110   IF -> t_if par1 EXP par2 BLOQUE t_else IF
Rule 111   IF -> t_if par1 EXP par2 BLOQUE t_else BLOQUE
Rule 112   Parametro -> Tipos iden
Rule 113   Parametro -> Tipos iden LACCESO
Rule 114   LLAMADA -> iden par1 ELEMENTS par2
Rule 115   LLAMADA -> iden par1 par2
Rule 116   EXP -> EXP mas EXP
Rule 117   EXP -> EXP menos EXP
Rule 118   EXP -> EXP por EXP
Rule 119   EXP -> EXP division EXP
Rule 120   EXP -> EXP modulo EXP
Rule 121   EXP -> EXP mayor EXP
Rule 122   EXP -> EXP mayori EXP
Rule 123   EXP -> EXP menor EXP
Rule 124   EXP -> EXP menori EXP
Rule 125   EXP -> EXP igual EXP
Rule 126   EXP -> EXP diferente EXP
Rule 127   EXP -> EXP and EXP
Rule 128   EXP -> EXP or EXP
Rule 129   EXP -> iden LACCESO
Rule 130   EXP -> par1 t_char par2 EXP
Rule 131   EXP -> par1 t_int par2 EXP
Rule 132   EXP -> par1 t_float par2 EXP
Rule 133   EXP -> string
Rule 134   EXP -> entero
Rule 135   EXP -> decimal
Rule 136   EXP -> char
Rule 137   EXP -> iden
Rule 138   EXP -> par1 EXP par2
Rule 139   EXP -> EXP shiftizq EXP
Rule 140   EXP -> EXP shiftder EXP
Rule 141   EXP -> EXP andb EXP
Rule 142   EXP -> EXP xorb EXP
Rule 143   EXP -> EXP orb EXP
Rule 144   EXP -> t_scanf par1 par2
Rule 145   EXP -> mas EXP
Rule 146   EXP -> menos EXP
Rule 147   EXP -> not EXP
Rule 148   EXP -> notb EXP
Rule 149   EXP -> andb EXP
Rule 150   INC_PRE -> incremento EXP
Rule 151   INC_PRE -> decremento EXP
Rule 152   INC_POST -> EXP incremento
Rule 153   INC_POST -> EXP decremento
Rule 154   EXP -> incremento EXP
Rule 155   EXP -> decremento EXP
Rule 156   EXP -> EXP condicional EXP bipunto EXP
Rule 157   EXP -> EXP incremento
Rule 158   EXP -> EXP decremento
Rule 159   EXP -> llav1 ELEMENTS llav2
Rule 160   ELEMENTS -> ELEMENTS coma EXP
Rule 161   ELEMENTS -> EXP
Rule 162   EXP -> LLAMADA
Rule 163   EXP -> ACCESO_STRUCT
Rule 164   EXP -> t_sizeof par1 EXP par2

Terminals, with rules where they appear

and                  : 127
andb                 : 141 149
andbasigna           : 28
asigna               : 14 15 17 38
bipunto              : 93 103 104 105 106 156
char                 : 136
coma                 : 11 20 43 58 81 160
condicional          : 156
cor1                 : 15 18 19 47
cor2                 : 15 18 19 47
decimal              : 135
decremento           : 151 153 155 158
diferente            : 126
divasigna            : 29
division             : 119
entero               : 134
error                : 5 62
iden                 : 13 14 15 16 17 22 23 24 25 39 45 46 47 48 49 55 56 83 83 84 84 93 94 112 113 114 115 129 137
igual                : 125
incremento           : 150 152 154 157
llav1                : 39 85 86 99 100 159
llav2                : 39 85 86 99 100 159
mas                  : 116 145
masasigna            : 30
mayor                : 121
mayori               : 122
menor                : 123
menori               : 124
menos                : 117 146
menosasigna          : 31
modasigna            : 32
modulo               : 120
not                  : 147
notb                 : 148
or                   : 128
orb                  : 143
orbasigna            : 33
par1                 : 55 56 81 82 87 95 96 99 100 109 110 111 114 115 130 131 132 138 144 164
par2                 : 55 56 81 82 91 92 95 96 99 100 109 110 111 114 115 130 131 132 138 144 164
por                  : 118
porasigna            : 34
punto                : 50
pyc                  : 7 8 10 42 64 65 66 68 69 70 72 74 76 78 79 80 87 88 89 90
shiftder             : 140
shiftderasigna       : 36
shiftizq             : 139
shiftizqasigna       : 35
string               : 81 82 133
t_break              : 107
t_case               : 103 104
t_char               : 51 130
t_continue           : 108
t_default            : 105 106
t_do                 : 95
t_double             : 53
t_else               : 110 111
t_float              : 54 132
t_for                : 87
t_goto               : 94
t_if                 : 109 110 111
t_int                : 52 131
t_printf             : 81 82
t_return             : 97 98
t_scanf              : 144
t_sizeof             : 164
t_struct             : 39 83 84
t_switch             : 99 100
t_void               : 56
t_while              : 95 96
xorb                 : 142
xorbasinga           : 37

Nonterminals, with rules where they appear

ACCESO_STRUCT        : 26 27 163
ASIGNACION           : 20 21 89
ATRIBUTO             : 40 41
ATRIBUTOS            : 39 40
BLOQUE               : 55 56 87 95 96 109 110 111 111
BREAK                : 69
CASO                 : 101 102
CASOS                : 99 100 101
CONTINUE             : 70
DEFAULT              : 100
DO_WHILE             : 72
Dec                  : 11 12 88
Declaracion          : 6 63
ELEMENTS             : 81 114 159 160
ETIQUETA             : 75
EXP                  : 14 15 17 18 19 23 25 26 87 91 95 96 97 99 100 103 104 109 110 111 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 130 131 132 138 139 139 140 140 141 141 142 142 143 143 145 146 147 148 149 150 151 152 153 154 155 156 156 156 157 158 160 161 164
FOR                  : 77
Funcion              : 9
GOTO                 : 76
IF                   : 67 110
INCDC                : 87
INC_POST             : 79
INC_PRE              : 80
INICIO               : 87
INSTANCIA            : 65
ItemsStruct          : 43 44
ItemsStruct2         : 50 50
LACCESO              : 16 17 18 24 25 46 49 83 113 129
LASIGNACION          : 7 20 64
LItemsStruct         : 42 43
LLAMADA              : 68 162
L_Dec                : 10 11
OP                   : 23 25 26
PRINTF               : 78
Parametro            : 58 59
Parametros           : 55 56 58
RETURN               : 74
S                    : 0
SS_F                 : 60 85 103 105
STRUCT               : 8 66
SWITCH               : 71
S_F                  : 60 61
Sentencia_G          : 3 4
Sentencias_G         : 1 3
Tipos                : 10 42 55 88 112 113
WHILE                : 73

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . Sentencias_G
    (2) S -> .
    (3) Sentencias_G -> . Sentencias_G Sentencia_G
    (4) Sentencias_G -> . Sentencia_G
    (5) Sentencia_G -> . error
    (6) Sentencia_G -> . Declaracion
    (7) Sentencia_G -> . LASIGNACION pyc
    (8) Sentencia_G -> . STRUCT pyc
    (9) Sentencia_G -> . Funcion
    (10) Declaracion -> . Tipos L_Dec pyc
    (20) LASIGNACION -> . LASIGNACION coma ASIGNACION
    (21) LASIGNACION -> . ASIGNACION
    (39) STRUCT -> . t_struct iden llav1 ATRIBUTOS llav2
    (55) Funcion -> . Tipos iden par1 Parametros par2 BLOQUE
    (56) Funcion -> . t_void iden par1 Parametros par2 BLOQUE
    (51) Tipos -> . t_char
    (52) Tipos -> . t_int
    (53) Tipos -> . t_double
    (54) Tipos -> . t_float
    (22) ASIGNACION -> . iden
    (23) ASIGNACION -> . iden OP EXP
    (24) ASIGNACION -> . iden LACCESO
    (25) ASIGNACION -> . iden LACCESO OP EXP
    (26) ASIGNACION -> . ACCESO_STRUCT OP EXP
    (27) ASIGNACION -> . ACCESO_STRUCT
    (50) ACCESO_STRUCT -> . ItemsStruct2 punto ItemsStruct2
    (48) ItemsStruct2 -> . iden
    (49) ItemsStruct2 -> . iden LACCESO

    $end            reduce using rule 2 (S -> .)
    error           shift and go to state 4
    t_struct        shift and go to state 11
    t_void          shift and go to state 13
    t_char          shift and go to state 14
    t_int           shift and go to state 15
    t_double        shift and go to state 16
    t_float         shift and go to state 17
    iden            shift and go to state 12

    S                              shift and go to state 1
    Sentencias_G                   shift and go to state 2
    Sentencia_G                    shift and go to state 3
    Declaracion                    shift and go to state 5
    LASIGNACION                    shift and go to state 6
    STRUCT                         shift and go to state 7
    Funcion                        shift and go to state 8
    Tipos                          shift and go to state 9
    ASIGNACION                     shift and go to state 10
    ACCESO_STRUCT                  shift and go to state 18
    ItemsStruct2                   shift and go to state 19

state 1

    (0) S' -> S .



state 2

    (1) S -> Sentencias_G .
    (3) Sentencias_G -> Sentencias_G . Sentencia_G
    (5) Sentencia_G -> . error
    (6) Sentencia_G -> . Declaracion
    (7) Sentencia_G -> . LASIGNACION pyc
    (8) Sentencia_G -> . STRUCT pyc
    (9) Sentencia_G -> . Funcion
    (10) Declaracion -> . Tipos L_Dec pyc
    (20) LASIGNACION -> . LASIGNACION coma ASIGNACION
    (21) LASIGNACION -> . ASIGNACION
    (39) STRUCT -> . t_struct iden llav1 ATRIBUTOS llav2
    (55) Funcion -> . Tipos iden par1 Parametros par2 BLOQUE
    (56) Funcion -> . t_void iden par1 Parametros par2 BLOQUE
    (51) Tipos -> . t_char
    (52) Tipos -> . t_int
    (53) Tipos -> . t_double
    (54) Tipos -> . t_float
    (22) ASIGNACION -> . iden
    (23) ASIGNACION -> . iden OP EXP
    (24) ASIGNACION -> . iden LACCESO
    (25) ASIGNACION -> . iden LACCESO OP EXP
    (26) ASIGNACION -> . ACCESO_STRUCT OP EXP
    (27) ASIGNACION -> . ACCESO_STRUCT
    (50) ACCESO_STRUCT -> . ItemsStruct2 punto ItemsStruct2
    (48) ItemsStruct2 -> . iden
    (49) ItemsStruct2 -> . iden LACCESO

    $end            reduce using rule 1 (S -> Sentencias_G .)
    error           shift and go to state 4
    t_struct        shift and go to state 11
    t_void          shift and go to state 13
    t_char          shift and go to state 14
    t_int           shift and go to state 15
    t_double        shift and go to state 16
    t_float         shift and go to state 17
    iden            shift and go to state 12

    Sentencia_G                    shift and go to state 20
    Declaracion                    shift and go to state 5
    LASIGNACION                    shift and go to state 6
    STRUCT                         shift and go to state 7
    Funcion                        shift and go to state 8
    Tipos                          shift and go to state 9
    ASIGNACION                     shift and go to state 10
    ACCESO_STRUCT                  shift and go to state 18
    ItemsStruct2                   shift and go to state 19

state 3

    (4) Sentencias_G -> Sentencia_G .

    error           reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    t_struct        reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    t_void          reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    t_char          reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    t_int           reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    t_double        reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    t_float         reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    iden            reduce using rule 4 (Sentencias_G -> Sentencia_G .)
    $end            reduce using rule 4 (Sentencias_G -> Sentencia_G .)


state 4

    (5) Sentencia_G -> error .

    error           reduce using rule 5 (Sentencia_G -> error .)
    t_struct        reduce using rule 5 (Sentencia_G -> error .)
    t_void          reduce using rule 5 (Sentencia_G -> error .)
    t_char          reduce using rule 5 (Sentencia_G -> error .)
    t_int           reduce using rule 5 (Sentencia_G -> error .)
    t_double        reduce using rule 5 (Sentencia_G -> error .)
    t_float         reduce using rule 5 (Sentencia_G -> error .)
    iden            reduce using rule 5 (Sentencia_G -> error .)
    $end            reduce using rule 5 (Sentencia_G -> error .)


state 5

    (6) Sentencia_G -> Declaracion .

    error           reduce using rule 6 (Sentencia_G -> Declaracion .)
    t_struct        reduce using rule 6 (Sentencia_G -> Declaracion .)
    t_void          reduce using rule 6 (Sentencia_G -> Declaracion .)
    t_char          reduce using rule 6 (Sentencia_G -> Declaracion .)
    t_int           reduce using rule 6 (Sentencia_G -> Declaracion .)
    t_double        reduce using rule 6 (Sentencia_G -> Declaracion .)
    t_float         reduce using rule 6 (Sentencia_G -> Declaracion .)
    iden            reduce using rule 6 (Sentencia_G -> Declaracion .)
    $end            reduce using rule 6 (Sentencia_G -> Declaracion .)


state 6

    (7) Sentencia_G -> LASIGNACION . pyc
    (20) LASIGNACION -> LASIGNACION . coma ASIGNACION

    pyc             shift and go to state 21
    coma            shift and go to state 22


state 7

    (8) Sentencia_G -> STRUCT . pyc

    pyc             shift and go to state 23


state 8

    (9) Sentencia_G -> Funcion .

    error           reduce using rule 9 (Sentencia_G -> Funcion .)
    t_struct        reduce using rule 9 (Sentencia_G -> Funcion .)
    t_void          reduce using rule 9 (Sentencia_G -> Funcion .)
    t_char          reduce using rule 9 (Sentencia_G -> Funcion .)
    t_int           reduce using rule 9 (Sentencia_G -> Funcion .)
    t_double        reduce using rule 9 (Sentencia_G -> Funcion .)
    t_float         reduce using rule 9 (Sentencia_G -> Funcion .)
    iden            reduce using rule 9 (Sentencia_G -> Funcion .)
    $end            reduce using rule 9 (Sentencia_G -> Funcion .)


state 9

    (10) Declaracion -> Tipos . L_Dec pyc
    (55) Funcion -> Tipos . iden par1 Parametros par2 BLOQUE
    (11) L_Dec -> . L_Dec coma Dec
    (12) L_Dec -> . Dec
    (13) Dec -> . iden
    (14) Dec -> . iden asigna EXP
    (15) Dec -> . iden cor1 cor2 asigna EXP
    (16) Dec -> . iden LACCESO
    (17) Dec -> . iden LACCESO asigna EXP

    iden            shift and go to state 25

    L_Dec                          shift and go to state 24
    Dec                            shift and go to state 26

state 10

    (21) LASIGNACION -> ASIGNACION .

    pyc             reduce using rule 21 (LASIGNACION -> ASIGNACION .)
    coma            reduce using rule 21 (LASIGNACION -> ASIGNACION .)


state 11

    (39) STRUCT -> t_struct . iden llav1 ATRIBUTOS llav2

    iden            shift and go to state 27


state 12

    (22) ASIGNACION -> iden .
    (23) ASIGNACION -> iden . OP EXP
    (24) ASIGNACION -> iden . LACCESO
    (25) ASIGNACION -> iden . LACCESO OP EXP
    (48) ItemsStruct2 -> iden .
    (49) ItemsStruct2 -> iden . LACCESO
    (28) OP -> . andbasigna
    (29) OP -> . divasigna
    (30) OP -> . masasigna
    (31) OP -> . menosasigna
    (32) OP -> . modasigna
    (33) OP -> . orbasigna
    (34) OP -> . porasigna
    (35) OP -> . shiftizqasigna
    (36) OP -> . shiftderasigna
    (37) OP -> . xorbasinga
    (38) OP -> . asigna
    (18) LACCESO -> . LACCESO cor1 EXP cor2
    (19) LACCESO -> . cor1 EXP cor2

    pyc             reduce using rule 22 (ASIGNACION -> iden .)
    coma            reduce using rule 22 (ASIGNACION -> iden .)
    punto           reduce using rule 48 (ItemsStruct2 -> iden .)
    andbasigna      shift and go to state 30
    divasigna       shift and go to state 31
    masasigna       shift and go to state 32
    menosasigna     shift and go to state 33
    modasigna       shift and go to state 34
    orbasigna       shift and go to state 35
    porasigna       shift and go to state 36
    shiftizqasigna  shift and go to state 37
    shiftderasigna  shift and go to state 38
    xorbasinga      shift and go to state 39
    asigna          shift and go to state 40
    cor1            shift and go to state 41

    OP                             shift and go to state 28
    LACCESO                        shift and go to state 29

state 13

    (56) Funcion -> t_void . iden par1 Parametros par2 BLOQUE

    iden            shift and go to state 42


state 14

    (51) Tipos -> t_char .

    iden            reduce using rule 51 (Tipos -> t_char .)


state 15

    (52) Tipos -> t_int .

    iden            reduce using rule 52 (Tipos -> t_int .)


state 16

    (53) Tipos -> t_double .

    iden            reduce using rule 53 (Tipos -> t_double .)


state 17

    (54) Tipos -> t_float .

    iden            reduce using rule 54 (Tipos -> t_float .)


state 18

    (26) ASIGNACION -> ACCESO_STRUCT . OP EXP
    (27) ASIGNACION -> ACCESO_STRUCT .
    (28) OP -> . andbasigna
    (29) OP -> . divasigna
    (30) OP -> . masasigna
    (31) OP -> . menosasigna
    (32) OP -> . modasigna
    (33) OP -> . orbasigna
    (34) OP -> . porasigna
    (35) OP -> . shiftizqasigna
    (36) OP -> . shiftderasigna
    (37) OP -> . xorbasinga
    (38) OP -> . asigna

    pyc             reduce using rule 27 (ASIGNACION -> ACCESO_STRUCT .)
    coma            reduce using rule 27 (ASIGNACION -> ACCESO_STRUCT .)
    andbasigna      shift and go to state 30
    divasigna       shift and go to state 31
    masasigna       shift and go to state 32
    menosasigna     shift and go to state 33
    modasigna       shift and go to state 34
    orbasigna       shift and go to state 35
    porasigna       shift and go to state 36
    shiftizqasigna  shift and go to state 37
    shiftderasigna  shift and go to state 38
    xorbasinga      shift and go to state 39
    asigna          shift and go to state 40

    OP                             shift and go to state 43

state 19

    (50) ACCESO_STRUCT -> ItemsStruct2 . punto ItemsStruct2

    punto           shift and go to state 44


state 20

    (3) Sentencias_G -> Sentencias_G Sentencia_G .

    error           reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    t_struct        reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    t_void          reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    t_char          reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    t_int           reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    t_double        reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    t_float         reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    iden            reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)
    $end            reduce using rule 3 (Sentencias_G -> Sentencias_G Sentencia_G .)


state 21

    (7) Sentencia_G -> LASIGNACION pyc .

    error           reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    t_struct        reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    t_void          reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    t_char          reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    t_int           reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    t_double        reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    t_float         reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    iden            reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)
    $end            reduce using rule 7 (Sentencia_G -> LASIGNACION pyc .)


state 22

    (20) LASIGNACION -> LASIGNACION coma . ASIGNACION
    (22) ASIGNACION -> . iden
    (23) ASIGNACION -> . iden OP EXP
    (24) ASIGNACION -> . iden LACCESO
    (25) ASIGNACION -> . iden LACCESO OP EXP
    (26) ASIGNACION -> . ACCESO_STRUCT OP EXP
    (27) ASIGNACION -> . ACCESO_STRUCT
    (50) ACCESO_STRUCT -> . ItemsStruct2 punto ItemsStruct2
    (48) ItemsStruct2 -> . iden
    (49) ItemsStruct2 -> . iden LACCESO

    iden            shift and go to state 12

    ASIGNACION                     shift and go to state 45
    ACCESO_STRUCT                  shift and go to state 18
    ItemsStruct2                   shift and go to state 19

state 23

    (8) Sentencia_G -> STRUCT pyc .

    error           reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    t_struct        reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    t_void          reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    t_char          reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    t_int           reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    t_double        reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    t_float         reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    iden            reduce using rule 8 (Sentencia_G -> STRUCT pyc .)
    $end            reduce using rule 8 (Sentencia_G -> STRUCT pyc .)


state 24

    (10) Declaracion -> Tipos L_Dec . pyc
    (11) L_Dec -> L_Dec . coma Dec

    pyc             shift and go to state 46
    coma            shift and go to state 47


state 25

    (55) Funcion -> Tipos iden . par1 Parametros par2 BLOQUE
    (13) Dec -> iden .
    (14) Dec -> iden . asigna EXP
    (15) Dec -> iden . cor1 cor2 asigna EXP
    (16) Dec -> iden . LACCESO
    (17) Dec -> iden . LACCESO asigna EXP
    (18) LACCESO -> . LACCESO cor1 EXP cor2
    (19) LACCESO -> . cor1 EXP cor2

    par1            shift and go to state 48
    pyc             reduce using rule 13 (Dec -> iden .)
    coma            reduce using rule 13 (Dec -> iden .)
    asigna          shift and go to state 49
    cor1            shift and go to state 50

    LACCESO                        shift and go to state 51

state 26

    (12) L_Dec -> Dec .

    pyc             reduce using rule 12 (L_Dec -> Dec .)
    coma            reduce using rule 12 (L_Dec -> Dec .)


state 27

    (39) STRUCT -> t_struct iden . llav1 ATRIBUTOS llav2

    llav1           shift and go to state 52


state 28

    (23) ASIGNACION -> iden OP . EXP
    (116) EXP -> . EXP mas EXP
    (117) EXP -> . EXP menos EXP
    (118) EXP -> . EXP por EXP
    (119) EXP -> . EXP division EXP
    (120) EXP -> . EXP modulo EXP
    (121) EXP -> . EXP mayor EXP
    (122) EXP -> . EXP mayori EXP
    (123) EXP -> . EXP menor EXP
    (124) EXP -> . EXP menori EXP
    (125) EXP -> . EXP igual EXP
    (126) EXP -> . EXP diferente EXP
    (127) EXP -> . EXP and EXP
    (128) EXP -> . EXP or EXP
    (129) EXP -> . iden LACCESO
    (130) EXP -> . par1 t_char par2 EXP
    (131) EXP -> . par1 t_int par2 EXP
    (132) EXP -> . par1 t_float par2 EXP
    (133) EXP -> . string
    (134) EXP -> . entero
    (135) EXP -> . decimal
    (136) EXP -> . char
    (137) EXP -> . iden
    (138) EXP -> . par1 EXP par2
    (139) EXP -> . EXP shiftizq EXP
    (140) EXP -> . EXP shiftder EXP
    (141) EXP -> . EXP andb EXP
    (142) EXP -> . EXP xorb EXP
    (143) EXP -> . EXP orb EXP
    (144) EXP -> . t_scanf par1 par2
    (145) EXP -> . mas EXP
    (146) EXP -> . menos EXP
    (147) EXP -> . not EXP
    (148) EXP -> . notb EXP
    (149) EXP -> . andb EXP
    (154) EXP -> . incremento EXP
    (155) EXP -> . decremento EXP
    (156) EXP -> . EXP condicional EXP bipunto EXP
    (157) EXP -> . EXP incremento
    (158) EXP -> . EXP decremento
    (159) EXP -> . llav1 ELEMENTS llav2
    (162) EXP -> . LLAMADA
    (163) EXP -> . ACCESO_STRUCT
    (164) EXP -> . t_sizeof par1 EXP par2
    (114) LLAMADA -> . iden par1 ELEMENTS par2
    (115) LLAMADA -> . iden par1 par2
    (50) ACCESO_STRUCT -> . ItemsStruct2 punto ItemsStruct2
    (48) ItemsStruct2 -> . iden
    (49) ItemsStruct2 -> . iden LACCESO

    iden            shift and go to state 53
    par1            shift and go to state 57
    string          shift and go to state 58
    entero          shift and go to state 59
    decimal         shift and go to state 60
    char            shift and go to state 61
    t_scanf         shift and go to state 63
    mas             shift and go to state 55
    menos           shift and go to state 56
    not             shift and go to state 64
    notb            shift and go to state 65
    andb            shift and go to state 62
    incremento      shift and go to state 66
    decremento      shift and go to state 67
    llav1           shift and go to state 68
    t_sizeof        shift and go to state 71

    EXP                            shift and go to state 54
    LLAMADA                        shift and go to state 69
    ACCESO_STRUCT                  shift and go to state 70
    ItemsStruct2                   shift and go to state 19

state 29

    (24) ASIGNACION -> iden LACCESO .
    (25) ASIGNACION -> iden LACCESO . OP EXP
    (49) ItemsStruct2 -> iden LACCESO .
    (18) LACCESO -> LACCESO . cor1 EXP cor2
    (28) OP -> . andbasigna
    (29) OP -> . divasigna
    (30) OP -> . masasigna
    (31) OP -> . menosasigna
    (32) OP -> . modasigna
    (33) OP -> . orbasigna
    (34) OP -> . porasigna
    (35) OP -> . shiftizqasigna
    (36) OP -> . shiftderasigna
    (37) OP -> . xorbasinga
    (38) OP -> . asigna

    pyc             reduce using rule 24 (ASIGNACION -> iden LACCESO .)
    coma            reduce using rule 24 (ASIGNACION -> iden LACCESO .)
    punto           reduce using rule 49 (ItemsStruct2 -> iden LACCESO .)
    cor1            shift and go to state 73
    andbasigna      shift and go to state 30
    divasigna       shift and go to state 31
    masasigna       shift and go to state 32
    menosasigna     shift and go to state 33
    modasigna       shift and go to state 34
    orbasigna       shift and go to state 35
    porasigna       shift and go to state 36
    shiftizqasigna  shift and go to state 37
    shiftderasigna  shift and go to state 38
    xorbasinga      shift and go to state 39
    asigna          shift and go to state 40

    OP                             shift and go to state 72

state 30

    (28) OP -> andbasigna .

    iden            reduce using rule 28 (OP -> andbasigna .)
    par1            reduce using rule 28 (OP -> andbasigna .)
    string          reduce using rule 28 (OP -> andbasigna .)
    entero          reduce using rule 28 (OP -> andbasigna .)
    decimal         reduce using rule 28 (OP -> andbasigna .)
    char            reduce using rule 28 (OP -> andbasigna .)
    t_scanf         reduce using rule 28 (OP -> andbasigna .)
    mas             reduce using rule 28 (OP -> andbasigna .)
    menos           reduce using rule 28 (OP -> andbasigna .)
    not             reduce using rule 28 (OP -> andbasigna .)
    notb            reduce using rule 28 (OP -> andbasigna .)
    andb            reduce using rule 28 (OP -> andbasigna .)
    incremento      reduce using rule 28 (OP -> andbasigna .)
    decremento      reduce using rule 28 (OP -> andbasigna .)
    llav1           reduce using rule 28 (OP -> andbasigna .)
    t_sizeof        reduce using rule 28 (OP -> andbasigna .)


state 31

    (29) OP -> divasigna .
